<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:id="@+id/mLinearLayout"
    android:layout_height = "match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/video_layout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        >
        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/recipe_playerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
             />
    </LinearLayout>

    <ScrollView
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tool:text="Description"
                android:fontFamily="monospace" />
            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tool:src="@mipmap/ic_launcher"/>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        >

        <Button
            android:id="@+id/button_prev"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/btn_prev"
            android:elevation="16dp"/>
        <Button
            android:id="@+id/button_Next"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/btn_next"
            android:elevation="16dp"/>
    </LinearLayout>

</LinearLayout>

