<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/StepIngFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
       <include layout="@layout/activity_item_list" />



    </FrameLayout>

</LinearLayout>