<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id = "@+id/mainLayout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context="bakingapp.project.anuja.com.bakeapp.MainActivity">

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycler_view" />

    <TextView
        android:id="@+id/no_internet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/No_recipes"
        style="?android:attr/textAppearanceLarge"
        android:visibility="gone"/>

</LinearLayout>
